CORDA-4167: Upgrade plugins for Gradle 7.2.