@@ -1,11 +1,9 @@
-import static org.gradle.api.JavaVersion.current
 import static org.gradle.api.JavaVersion.VERSION_1_8
+import static org.gradle.jvm.toolchain.JavaLanguageVersion.of
 
 plugins {
     id 'org.jetbrains.kotlin.jvm' apply false
-    id 'com.jfrog.bintray' apply false
     id 'com.jfrog.artifactory'
-    id 'com.gradle.build-scan'
 }
 
 ext {
@@ -18,16 +16,20 @@ allprojects {
     version gradle_plugins_version
     group 'net.corda.plugins'
 
+    pluginManager.withPlugin('java') {
+        java {
+            toolchain {
+                languageVersion = of(8)
+            }
+        }
+    }
+
     tasks.withType(JavaCompile).configureEach {
         options.encoding = 'UTF-8'
-        sourceCompatibility = VERSION_1_8
-        targetCompatibility = VERSION_1_8
     }
 
     tasks.withType(GroovyCompile).configureEach {
         options.encoding = 'UTF-8'
-        sourceCompatibility = VERSION_1_8
-        targetCompatibility = VERSION_1_8
     }
 
     tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
@@ -35,11 +37,13 @@ allprojects {
             // When writing Gradle plugins in Kotlin, we need to restrict
             // ourselves to the same Kotlin API that Gradle itself uses.
             // Gradle 4.10.x uses Kotlin 1.2.
-            // Gradle 5.x uses Kotlin 1.3.
+            // Gradle 5.x - 6.7.1 uses Kotlin 1.3.
+            // Gradle 6.8+ uses Kotlin 1.3, but with the Kotlin 1.4 libraries.
+            // Gradle 7.2 uses Kotlin 1.4, but with the Kotlin 1.5 libraries.
             jvmTarget = VERSION_1_8
-            apiVersion = '1.3'
-            languageVersion = '1.3'
-            freeCompilerArgs = ['-Xjvm-default=enable']
+            apiVersion = '1.4'
+            languageVersion = '1.4'
+            freeCompilerArgs = ['-Xjvm-default=all']
         }
     }
 
@@ -54,23 +58,16 @@ allprojects {
             // We need the tests to share this module cache to prevent the
             // Gradle Test-Kit from downloading its own copy of Kotlin etc.
             systemProperty 'test.gradle.user.home', gradle.gradleUserHomeDir
-
-            // Resolve warnings about "illegal reflective access" that
-            // are generated by Gradle's own Groovy library.
-            if (current().java9Compatible) {
-                jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED',
-                        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
-                        '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
-                        '--add-opens', 'java.base/java.util=ALL-UNNAMED',
-                        '--add-opens', 'java.base/sun.nio.fs=ALL-UNNAMED',
-                        '--illegal-access=warn'
-            }
         }
     }
 
-    tasks.withType(ValidateTaskProperties).configureEach {
+    tasks.withType(ValidatePlugins).configureEach {
         // Ask Gradle to tell us how to annotate tasks correctly.
         enableStricterValidation = true
+    }
+
+    tasks.withType(GenerateModuleMetadata).configureEach {
+        enabled = false
     }
 
     idea {
@@ -88,7 +85,6 @@ def publishProjects = childProjects.values()
 
 configure(publishProjects) { Project subproject ->
     apply plugin: 'maven-publish'
-    apply plugin: 'com.jfrog.bintray'
     apply plugin: 'com.jfrog.artifactory'
 
     evaluationDependsOn(subproject.path)
@@ -128,7 +124,7 @@ configure(publishProjects) { Project subproject ->
                 groupId subproject.group
                 artifactId subproject.name
 
-                pluginManager.withPlugin('java') {
+                pluginManager.withPlugin('java') { p ->
                     if (subproject.hasProperty('mavenArtifacts')) {
                         subproject.mavenArtifacts.call(it)
                     } else {
@@ -183,7 +179,7 @@ configure(publishProjects) { Project subproject ->
             //     }
             //
             // except that this would also discard all of our POM customisations.
-            pluginManager.withPlugin('java-gradle-plugin') {
+            pluginManager.withPlugin('java-gradle-plugin') { p ->
                 subproject.extensions['gradlePlugin'].plugins.configureEach { plugin ->
                     def pluginMarkerName = subproject.name + '-' + plugin.name
                     register(pluginMarkerName, MavenPublication) {
@@ -210,26 +206,6 @@ configure(publishProjects) { Project subproject ->
             }
         }
     }
-
-    bintray {
-        user = System.getenv('CORDA_BINTRAY_USER') ?: System.getProperty('corda.bintray.user')
-        key = System.getenv('CORDA_BINTRAY_KEY') ?: System.getProperty('corda.bintray.key')
-        publications = [subproject.name]
-        dryRun = (System.getenv('CORDA_BINTRAY_DRYRUN') != null || System.getProperty('corda.bintray.dryrun') != null)
-        pkg {
-            repo = 'corda'
-            name = subproject.name
-            userOrg = 'r3'
-            licenses = ['Apache-2.0']
-
-            version {
-                gpg {
-                    sign = true
-                    passphrase = System.getenv('CORDA_BINTRAY_GPG_PASSPHRASE')
-                }
-            }
-        }
-    }
 }
 
 artifactory {
@@ -244,13 +220,6 @@ artifactory {
 }
 
 wrapper {
-    gradleVersion = '5.6.4'
+    gradleVersion = '7.2'
     distributionType = Wrapper.DistributionType.ALL
-}
-
-gradleEnterprise {
-    buildScan {
-        termsOfServiceUrl = 'https://gradle.com/terms-of-service'
-        termsOfServiceAgree = 'yes'
-    }
 }
